# earningshub-scraper

./: pyproject.toml  requirements.txt
data/export/: AAPL_eh_earnings.csv  AAPL_eh_overview.json  MSFT_eh_earnings.csv  MSFT_eh_overview.json  TGT_eh_earnings.csv  TGT_eh_overview.json
data/html_cache/: AAPL_analyst.html  AAPL_earnings.html  AAPL_overview.html  MSFT_analyst.html  MSFT_earnings.html  MSFT_overview.html  TGT_analyst.html  TGT_earnings.html  TGT_overview.html
src/epsilon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/epsilon/adapters/: logging.py
src/epsilon/app/: cli.py  run_pipeline.py
src/epsilon/config/: paths.py  settings.py
src/epsilon/domain/: dto.py
src/epsilon/services/db/: crud.py  db.py  models.py
src/epsilon/services/output/: writer.py
src/epsilon/services/parser/earningshub/: controller.py  eh_helper.py  history_parser.py  overview_parser.py  selectors.py
src/epsilon/services/scraper/: base.py  cache.py  helpers.py
src/epsilon/services/scraper/earningshub/: scraper.py  steps.py
